@@ -51,19 +51,23 @@ OFFSET  SIZE DATA    NAME	Description
  92 134  4   int     next;       number of bytes in extended header (called nsymbt in
                                    MRC standard)
  96 140  2   short   creatid;    used to be an ID number, is 0 as of IMOD 4.2.23
- 98 142  30  ---     extra data  (not used, first two bytes should be 0)
+ 98 142  6   ---     extra data  (not used, first two bytes should be 0)
+104 150  4   char    extType     Type of extended header, includes 'SERI' for
+                                 SerialEM, 'FEI1' for FEI, 'AGAR' for Agard
+108 154  4   int     nversion    MRC version that file conforms to, otherwise 0
+112 160  16  ---     extra data  (not used)
 
                                  These two values specify the structure of data in the
                                  extended header; their meaning depend on whether the
-                                 extended header has the Agard format, a series of
+                                 extended header has the FEI/Agard format, a series of
                                  4-byte integers then real numbers, or has data 
                                  produced by SerialEM, a series of short integers.
                                  SerialEM stores a float as two shorts, s1 and s2, by:
                                    value = (sign of s1)*(|s1|*256 + (|s2| modulo 256))
                                       * 2**((sign of s2) * (|s2|/256))
-128 200  2   short   nint;       Number of integers per section (Agard format) or
+128 200  2   short   nint;       Number of integers per section (FEI/Agard format) or
                                  number of bytes per section (SerialEM format)
-130 202  2   short   nreal;      Number of reals per section (Agard format) or bit
+130 202  2   short   nreal;      Number of reals per section (FEI/Agard format) or bit
                                  flags for which types of short data (SerialEM format):
                                  1 = tilt angle * 100  (2 bytes)
                                  2 = piece coordinates for montage  (6 bytes)
@@ -86,6 +90,7 @@ OFFSET  SIZE DATA    NAME	Description
                                  2 = pixel spacing was set from size in extended header 
                                  4 = origin is stored with sign inverted from definition
                                      below
+                                 8 = RMS value is negative if it was not computed
 
                               Explanation of type of data.
 160 240  2   short   idtype;  ( 0 = mono, 1 = tilt, 2 = tilts, 3 = lina, 4 = lins)
@@ -113,7 +118,8 @@ OFFSET  SIZE DATA    NAME	Description
 208 320  4   char    cmap;      Contains "MAP "
 212 324  4   char    stamp;     First two bytes have 17 and 17 for big-endian or 
                                   68 and 65 for little-endian
-216 330  4   float   rms;       RMS deviation of densities from mean density
+216 330  4   float   rms;       RMS deviation of densities from mean, should
+                                  be negative if not computed
 
         OLD-STYLE MRC HEADER - IMOD 2.6.19 and below:
 196 304  2   short   nwave;     # of wavelengths and values
@@ -147,12 +153,15 @@ and each division rounds downward to an integer.  The frequencies at the first
 and last lines of the transform are -int(ny / 2) / ny and 
 int((ny - 1) / 2) / ny, respectively, and similarly in Z for a 3D transform.
 
-Deviations from the MRC standard are: mode 6 for unsigned short integers, mode
-16 for RGB data, and the extended header defined by next, nint, and nreal.
-In the MRC standard nsymbt (next) is allowed to be only 0 or 80, with the
-80 bytes in a particular format.  Other non-standard items, in bytes 152-195,
-are at the top of the extra data section and do not conflict with other known
-uses.
+Potential deviations from the 2014 MRC standard are the use of mode 16 for RGB
+data, writing bytes (mode 0) unsigned, and the use of negative origins for
+subvolumes. Files with any of these non-conformities should have a zero in the
+NVERSION field.  For a conforming file, NVERSION would be 10 times the year of
+the standard plus a version number within the year.  Since this field was not
+zeroed out by SerialEM before version 3.3, IMOD code tests for 
+NVERSION >= 20140 and < 10 * (current year + 2).  Other non-standard items, in
+bytes 152-195, are at the top of the extra data section and do not conflict
+with other known uses.
 
 It is suggested that other developers willing to follow the conventions in the
 imodFlags field and wishing to indicate that files originated from their
